<resources>
    <string name="app_name">SDA Project John Buckley</string>
    <string name="button_one">Invite Guests</string>
    <string name="button_two">Guest List</string>
    <string name="button_three">Camera</string>
    <string name="button_four">Photographs</string>
    <string name="button_five">Weather</string>
    <string name="button_six">To Do List</string>
    <string name="button_seven">Import Guests from Contacts</string>
    <string name="button_eight">Enter in Guests</string>
    <string name="enterguestname">Enter Guest Name</string>
    <string name="enterguestemail">Enter Guest Email</string>
    <string name="enterguestphone">Enter Guest Phone number</string>
    <string name="enterguestbutton">Save</string>
    <string name="entertask">Task to be completed</string>
    <string name="entertaskduedate">Task Due Date</string>
    <string name="entertaskcompleteby">Task completed by</string>
    <string name="tasksave">Save</string>
    <string name="listtasks">Tasks List</string>
    <string name="addtheGuest">Add Guest</string>
    <string name="edittheguest">Edit</string>
    <string name="delete">Delete</string>
    <string name="guestdelete">"GuestName Deletion:</string>
    <string name="deletename">Enter the guest to be deleted</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
