<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.john.sdaprojectjohnbuckley.TaskListActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskdesc"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/entertask" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskcompletedby"
        android:layout_below="@+id/taskdesc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_alignRight="@+id/taskdesc"
        android:layout_alignEnd="@+id/taskdesc"
        android:hint="@string/entertaskcompleteby" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskduedate"
        android:layout_below="@+id/taskcompletedby"
        android:layout_marginTop="34dp"
        android:layout_alignRight="@+id/taskcompletedby"
        android:layout_alignEnd="@+id/taskcompletedby"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/entertaskduedate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasksave"
        android:id="@+id/savetask"
        android:layout_below="@+id/taskduedate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="save"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listtasks"
        android:id="@+id/tasklist"
        android:layout_below="@+id/savetask"
        android:layout_centerHorizontal="true"
        android:onClick="listData" />
</RelativeLayout>
