<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.john.sdaprojectjohnbuckley.GuestlistActivity">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtheGuest"
        android:id="@+id/addGuestbutton"
        android:onClick="addGuest"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/edittheguest"
        android:id="@+id/editButton"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/addGuestbutton"
        style="@style/DBButtonStyle"
        />

    <Button
        style="@style/DBButtonStyle"
        android:text="@string/delete"
        android:id="@+id/deleteButton"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/editButton"
        android:onClick="delete"/>


</RelativeLayout>
